# kmms_prog

./: .gitignore  CMakeLIsts.txt
25.10.17_refactoring/: after_refactoring_1.cpp  build_run2.bat  build_run_detailed2.bat
25.10.29_refactoring/: after_refactoring_2.cpp  before_refactoring_2_Copy.cpp  build_run.bat  build_run_detailed.bat
300925_cpp_compilation/: english.txt  main.cpp
HW3_class/: elem_func.cpp  menu_elements.cpp
HW3_class_refactoring/: elem_func.cpp  elem_func.h  main.cpp
HW4/: CMakeLists.txt
HW4/MenuTask/: CMakeLists.txt  el_func.cpp  el_func.h  main.cpp  menu_el.cpp  menu_el.h  menu_item.h
HW4/Menu_task/: CMakeLists.txt
HW4/projects/: CMakeLists.txt  build.bat
HW4/projects/MenuTask/: CMaleLists.txt  elem_func.cpp  elem_func.hpp  main.cpp  menu_elem.cpp  menu_elem.hpp  menu_item.hpp
HW4/projects/sort/src/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp
HW4/projects/sort/test/: CMakeLists.txt  test_bubble.cpp
HW4/sort/src/: bubble_sort.cpp  bubble_sort.h
NW3_class_refactoring/: menu_elements.cpp
homework/: Calculator.cpp  CalculatorApp.cpp  CalculatorApp.h  InputHandler.cpp  InputHandler.h  build_module_app.sh  build_run_module_app.bat  main.cpp
hw3/: element_functions.cpp  element_functions.h  main.cpp  menu.h  menu_elements.cpp  menu_elements.h
